tests/fail/destruct_named_mix_fail.stderr
error[E01119]: Cannot mix positional and named fields in destructuring
 --> tests/fail/destruct_named_mix_fail.tk:5:25
   |
 5 |     auto Point(a = .x, b) = p
   |                         ^
